--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="ІС-31 Березка Ірина">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ІС-31 Березка Ірина</title>
+    <title>Fitness club</title>
   </head>
   <body></body>
 </html>
