--- a/index.html
+++ b/index.html
@@ -5,8 +5,215 @@
     <meta name="author" content="ІС-31 Березка Ірина">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness club</title>
+    <style>
+      table {
+        margin: 0 auto;
+        padding: 20px 0;
+        border-collapse: collapse;
+      }
+      th,
+      td {
+        border: 1px solid black;
+        height: 66px;
+        width: 150px;
+        padding: 5px;
+        text-align: center;
+      }
+      th {
+        background-color: #471818bd;
+        color: #fff;
+      }
+    </style>
+
   </head>
-  <body>
-    <h1>hello</h1>
+  <body style="background-image: url(background.jpeg);background-size: 100%;font-size: 18px;font-family: Life">
+    <body bgcolor = "#C6BCB2">##</body>
+    <header>
+      <div>
+        <a href="logo.png" target="_blank">
+          <img src="logo.png" alt="Energia Fitness Logo" style="width: 100px; height: 100px; padding-left: 40px;" />
+        </a>
+        
+
+        <div>
+          <div >
+            <img src="phone.png" alt="Phone icon" />
+          </div>
+          <div>
+            <ol type="I">
+              <li><a style="color: brown;" href="tel:+380985157830">098-515-7830</a></li>
+              <li><a href="tel:+380675077397">067-507-7397</a></li>
+              <li><a href="tel:+380988765321">098-876-5321</a></li>
+          </ol>
+
+          </div>
+        </div>
+
+        <div>
+          <img src="location.png" alt="location" />
+          <p style="font-weight: bold;">
+            <font  face="Arial" size="4" color="red">м. Київ,</font> <br />
+            <font  face="Arial" size="4" color="brown"> вул. Івана Мазепи 3 </font><br />
+            <a href="https://maps.app.goo.gl/J9Jveiocf3okthhg9">Ми на карті</a>
+          </p>
+        </div>
+        <div>
+          <img src="clock.png" alt="clock" />
+          <p style="font-style: italic;">Час роботи: </p>
+            <dl>
+                <dt style="color: brown;">
+                    <p>Пн - Пт: </p>
+                </dt>
+                <dd>з 07:00 до 21:00</dd>
+
+                <dt style="color: rgb(255, 85, 85);">
+                    <p>Сб-Нд:</p>
+                </dt>
+                <dd>з 09:00 до 19:00</dd>
+            </dl>
+        </div>
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li type="square"><a href="index.html">Головна</a></li>
+        <li>|</li>
+        <li type="circle"><a href="review.html">Відгуки</a></li>
+        <li>|</li>
+        <li><a href="directions.html">Напрямки та команда</a></li>
+        <li>|</li>
+        <li><a href="prices.html">Абонементи та ціни</a></li>
+        <li>|</li>
+        <li><a href="schedules.html">Розклад групових занять</a></li>
+      </ul>
+    </nav>
+    <div>
+      <img src="Ellipse 1.png" alt="Ellipse" />
+      <h1>energia fitness</h1>
+    </div>
+
+    <main>
+    <section>
+        <h2 style="text-align: center;">Хто ми?</h2>
+        <div class="container">
+          <div class="photoes">
+            <img src="about-us1.png" alt="about-us1"/>
+            <img src="about-us2.png" alt="about-us2"/>
+            <img src="about-us3.png" alt="about-us3"/>
+          </div>
+          <p style="text-align: center;padding-left: 200px; width: 500px;">
+            Фітнес клуби Києва дивують своїм різноманіттям, та саме наш фітнес
+            клуб energia fitness пропонує вам унікальну можливість провести
+            тренування з максимальним результатом і користю для здоров`я . На
+            основі ваших потреб та побажань для вас розроблюється індивідуальна
+            фітнес програма, яка спрямована на проблемні зони тіла.<br /><br />
+            У кожному залі застосовані спеціальні покриття для підлоги, які
+            зводять до мінімуму эфект від ударів під час проведення тренувань,
+            також, у нас великий вибір силових тренажерів для будь яких типів
+            тренувань і видів фізичних навантажень.<br /><br />
+            Фітнес центр energia fitness пропонує Вашій увазі найрізноманітніші
+            можливості для активного та, головне, корисного для здоров`я
+            проведення часу: фітнес зали, просторі тренажерні зали, pole dance,
+            хореографія, силові тренування, йога, fly yoga, пілатес і також для
+            відновлення м’язів ми надаємо послуги масажу.
+          </p>
+        </div>
+      </section>
+      <section class="reviews">
+        <h2>Відгуки наших клієнтів</h2>
+        <div class="container">
+          <div class="reviews-grid">
+            <div class="review">
+              <h3>Сніжана</h3>
+              <p class="date">2024-03-04</p>
+              <p class="review-text">
+                Недавно переїхала в Київ. довго шукала зал, який повністю мені
+                підійде. Фітнес клуб дуже комфортний. чистий та акуратний. Нові
+                пілони є явною перевагою. Працюю з тренером Вікторіїю, чудова
+                спеціалістка, яка вміє працювати з мотивацією та знаходить
+                індивідуальний підхід відповідно до потреб.
+              </p>
+            </div>
+            <div class="review">
+              <h3>Даша</h3>
+              <p class="date">2023-11-30</p>
+              <p class="review-text">
+                Займаюсь з Настею і цей тренер мені максимально підходить!
+                Професійна і дуже легка в спілкуванні слідкує за моїм
+                харчуванням, хоч це і не входить в її обов'язки. В мене запит на
+                зниження ваги і об'ємів у бедрах і ногах. Я бачу результат і це
+                мотивує займатись з цим тренером далі.
+              </p>
+            </div>
+            <div class="review">
+              <h3>Дарина</h3>
+              <p class="date">2024-11-12</p>
+              <p class="review-text">
+                Дуже рекомендую цей клуб. Мої показники зростають все завдяки
+                професіоналізму супер тренера Вікторії. Якісні тренажери, полотна та пілони на
+                будь- який смак, ввічливий персонал, готовий завжди допомогти,
+                все на високому рівні. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h2>Послуги та напрямки</h2>
+        <div>
+          <table>
+            <thead>
+              <th>Напрямок 1</th>
+              <th>Напрямок 2</th>
+              <th>Напрямок 3</th>
+              <th>Напрямок 4</th>
+              <th>Напрямок 5</th>
+            </thead>
+            <tbody>
+              <tr >
+                <td><img height="380" src="pole-dance.jpg" alt="Pole Dance" /></td>
+                <td><img height="380" src="fly-yoga.jpg" alt="Fly Yoga" /></td>
+                <td><img height="380" src="pilates.jpg" alt="Pilates" /></td>
+                <td><img height="380" src="yoga.jpg" alt="Yoga" /></td>
+                <td><img height="380" src="stretching.jpg" alt="Stretching" /></td>
+              </tr>
+              <tr>
+                <td><a href="https://www.instagram.com/reel/DFug64AM-cr/?igsh=ZDJvYWx2dTRqYmxv">Pole-dance Instagram reel</a></td>
+                <td><a href="https://www.instagram.com/reel/C0bIZY9vhjt/?igsh=NTJhczJ2OG9hZTVl">Fly-yoga Instagram reel</a></td>
+                <td><a href="https://www.instagram.com/reel/DGIuITUuC-x/?igsh=MTM5ZHViNGxzYWN0NQ==">Pilates Instagram reel</a></td>
+                <td><a href="https://www.instagram.com/reel/DFxlEhIsu8h/?igsh=MWwyMHoyZWxkNjNyOQ==">Yoga Instagram reel</a></td>
+                <td><a href="https://www.instagram.com/reel/DF5zSD4yRfL/?igsh=MWhuZWt3c2I4Z3l0aw==">Stretching Instagram reel</a></td>
+              </tr>
+              <tr>
+                <td >Pole Dance</td>
+                <td>Fly Yoga</td>
+                <td>Pilates</td>
+                <td>Yoga</td>
+                <td>Stretching</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+      <div style="position: relative; width: 100%; max-width: 800px; height: 450px; padding: 20px; margin: auto;">
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25244.044063657385!2d30.523400000000003!3d50.4501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTAuNDUwMSwgMzAuNTIzNA!5e0!3m2!1suk!2sua!4v1709112345678"
+        width="100%" 
+        height="100%" 
+        style="border: 2px solid black; border-radius: 10px; box-shadow: 2px 2px 10px rgba(0,0,0,0.2);"
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+</div>
+
+
+    </main>
+    <footer>
+      <div >
+        <p>&copy; 2025 Energia Fitness</p>
+      </div>
+    </footer>
   </body>
 </html>
