--- a/schedules.html
+++ b/schedules.html
@@ -4,6 +4,209 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ІС-31 Березка Ірина</title>
+    <style>
+      body {
+        margin: 0;
+        background-image: url(background.jpeg);
+        background-size: 100%;
+        font-family: Life Savers;
+        font-size: 22px;
+      }
+      table {
+        margin: 0 auto;
+        padding: 20px 0;
+        border-spacing: 20px;
+      }
+      th,
+      td {
+        border-bottom: 1px solid black;
+        border-collapse: collapse;
+        height: 66px;
+        width: 150px;
+        padding: 15px;
+        text-align: center;
+      }
+      th {
+        background-color: #471818bd;
+        color: #fff;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container-head">
+        <img src="logo.png" alt="Energia Fitness Logo" class="logo" />
+
+        <div class="info">
+          <div class="phone-icon">
+            <img src="phone.png" alt="Phone icon" />
+          </div>
+          <div class="contact-item">
+            <a href="tel:+380985157830">098-515-7830</a>
+            <br />
+            <a href="tel:+380675077397">067-507-7397</a>
+            <br />
+            <a href="tel:+380988765321">098-876-5321</a>
+          </div>
+        </div>
+
+        <div class="info">
+          <img src="location.png" alt="location" />
+          <p>
+            м. Київ,<br />
+            вул. Івана Мазепи 3 <br />
+            <a href="https://maps.app.goo.gl/J9Jveiocf3okthhg9">Ми на карті</a>
+          </p>
+        </div>
+        <div class="info">
+          <img src="clock.png" alt="clock" />
+          <p>
+            Час роботи: <br />Пн - Пт: з 07:00 до 21:00 <br />
+            Сб-Нд: з 09:00 до 19:00
+          </p>
+        </div>
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Головна</a></li>
+        <li>|</li>
+        <li><a href="reviews.html">Відгуки</a></li>
+        <li>|</li>
+        <li><a href="directions.html">Напрямки та команда</a></li>
+        <li>|</li>
+        <li><a href="price.html">Абонементи та ціни</a></li>
+        <li>|</li>
+        <li><a href="schedule.html">Розклад групових занять</a></li>
+      </ul>
+    </nav>
+    <div class="main-banner">
+      <img src="Ellipse 1.png" alt="Ellipse" />
+      <h1>energia fitness</h1>
+    </div>
+    <main>
+      <section class="schedule">
+        <h2>Розклад групових заннять</h2>
+        <div class="schedule-table">
+        <table cellspacing="10" cellpadding="10">
+          <colgroup>
+          <col style="background-color: #69323250;">
+          </colgroup>
+
+          <tr>
+            <th>ЧАС</th>
+            <th>ПОНЕДІЛОК</th>
+            <th>ВІВТОРОК</th>
+            <th>СЕРЕДА</th>
+            <th>ЧЕТВЕР</th>
+            <th>П'ЯТНИЦЯ</th>
+            <th colspan="2">СУБОТА</th>
+            <th>НЕДІЛЯ</th>
+          </tr>
+          <tr>
+            <td>8:30</td>
+            <td>YOGA<br />тренер: Марина</td>
+            <td></td>
+            <td>YOGA<br />тренер: Марина</td>
+            <td>PILATES<br />тренер: Настя</td>
+            <td>STRETCHING<br />тренер: Віка</td>
+            <td>YOGA<br />тренер: Світлана</td>
+            <td>STRETCHING<br />тренер: Віка</td>
+            <td>STRETCHING<br />тренер: Дар'я</td>
+          </tr>
+          <tr>
+            <td>9:30</td>
+            <td>STRETCHING<br />тренер: Дар'я</td>
+            <td>YOGA<br />тренер: Світлана</td>
+            <td>FLY YOGA<br />тренер: Дар'я</td>
+            <td></td>
+            <td>POLE DANCE<br />тренер: Віка</td>
+            <td>FLY YOGA<br />тренер: Марина</td>
+            <td>PILATES<br />тренер: Настя</td>
+            <td>FLY YOGA<br />тренер: Марина</td>
+          </tr>
+          <tr>
+            <td>10:30</td>
+            <td></td>
+            <td>FLY YOGA<br />тренер: Світлана</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>POLE DANCE<br />тренер: Віка</td>
+            <td rowspan="2">FLY YOGA<br />тренер: Світлана</td>
+          </tr>
+          <tr>
+            <td>11:30</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>FLY YOGA<br />тренер: Марина</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>15:30</td>
+            <td></td>
+            <td>POLE DANCE<br />тренер: Світлана</td>
+            <td></td>
+            <td>POLE DANCE<br />тренер: Світлана</td>
+            <td></td>
+            <td></td>
+            <td rowspan="2">FLY YOGA<br />тренер: Марина</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>16:30</td>
+            <td>POLE DANCE<br />тренер: Віка</td>
+            <td>FLY YOGA<br />тренер: Світлана</td>
+            <td>POLE DANCE<br />тренер: Віка</td>
+            <td>FLY YOGA<br />тренер: Світлана</td>
+            <td></td>
+            <td>YOGA<br />тренер: Світлана</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>17:30</td>
+            <td>PILATES<br />тренер: Настя</td>
+            <td>PILATES<br />тренер: Дар'я</td>
+            <td>PILATES<br />тренер: Настя</td>
+            <td>PILATES<br />тренер: Дар'я</td>
+            <td>FLY YOGA<br />тренер: Марина</td>
+            <td>PILATES<br />тренер: Настя</td>
+            <td>YOGA<br />тренер: Марина</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>18:30</td>
+            <td>POLE DANCE<br />тренер: Віка</td>
+            <td>FLY YOGA<br />тренер: Дар'я</td>
+            <td>POLE DANCE<br />тренер: Віка</td>
+            <td>STRETCHING<br />тренер: Дар'я</td>
+            <td>POLE DANCE<br />тренер: Світлана</td>
+            <td></td>
+            <td></td>
+            <td rowspan="2">POLE DANCE<br />тренер: Віка</td>
+          </tr>
+          <tr>
+            <td>19:30</td>
+            <td>STRETCHING<br />тренер: Віка</td>
+            <td></td>
+            <td>STRETCHING<br />тренер: Віка</td>
+            <td>FLY YOGA<br />тренер: Марина</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
+        <p id="notice">*індивідуальні заняття можливі в години, в яких не вказані групові заняття <br></p></div>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <p>&copy; 2025 Energia Fitness</p>
+      </div>
+    </footer>
+  </body>
 </html>
