--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <p style="font-weight: bold;">
             <font  face="Arial" size="4" color="red">м. Київ,</font> <br />
             <font  face="Arial" size="4" color="brown"> вул. Івана Мазепи 3 </font><br />
-            <a href="https://maps.app.goo.gl/J9Jveiocf3okthhg9">Ми на карті</a>
+            <a href="#map">Ми на карті</a>
           </p>
         </div>
         <div>
@@ -196,7 +196,7 @@
           </table>
         </div>
       </section>
-      <div style="position: relative; width: 100%; max-width: 800px; height: 450px; padding: 20px; margin: auto;">
+      <div style="position: relative; width: 100%; max-width: 800px; height: 450px; padding: 20px; margin: auto;" id="map">
     <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25244.044063657385!2d30.523400000000003!3d50.4501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTAuNDUwMSwgMzAuNTIzNA!5e0!3m2!1suk!2sua!4v1709112345678"
         width="100%" 
