--- a/schedules.html
+++ b/schedules.html
@@ -55,7 +55,7 @@
           <p>
             м. Київ,<br />
             вул. Івана Мазепи 3 <br />
-            <a href="https://maps.app.goo.gl/J9Jveiocf3okthhg9">Ми на карті</a>
+            <a href="index.html#map">Ми на карті</a>
           </p>
         </div>
         <div class="info">
