--- a/prices.html
+++ b/prices.html
@@ -4,6 +4,123 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ІС-31 Березка Ірина</title>
+        <link rel="stylesheet" href="style.css" />
+
   </head>
-  <body></body>
+  <body>
+        <header>
+      <div class="container-head">
+        <img src="logo.png" alt="Energia Fitness Logo" class="logo" />
+
+        <div class="info">
+          <div class="phone-icon">
+            <img src="phone.png" alt="Phone icon" />
+          </div>
+          <div class="contact-item">
+            <a href="tel:+380985157830">098-515-7830</a>
+            <br />
+            <a href="tel:+380675077397">067-507-7397</a>
+            <br />
+            <a href="tel:+380988765321">098-876-5321</a>
+          </div>
+        </div>
+
+        <div class="info">
+          <img src="location.png" alt="location" />
+          <p>
+            м. Київ,<br />
+            вул. Івана Мазепи 3 <br />
+            <a href="https://maps.app.goo.gl/J9Jveiocf3okthhg9">Ми на карті</a>
+          </p>
+        </div>
+        <div class="info">
+          <img src="clock.png" alt="clock" />
+          <p>
+            Час роботи: <br />Пн - Пт: з 07:00 до 21:00 <br />
+            Сб-Нд: з 09:00 до 19:00
+          </p>
+        </div>
+      </div>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Головна</a></li>
+        <li>|</li>
+        <li><a href="review.html">Відгуки</a></li>
+        <li>|</li>
+        <li><a href="directions.html">Напрямки та команда</a></li>
+        <li>|</li>
+        <li><a href="prices.html">Абонементи та ціни</a></li>
+        <li>|</li>
+        <li><a href="schedules.html">Розклад групових занять</a></li>
+      </ul>
+    </nav>
+    <div class="main-banner">
+      <img src="Ellipse 1.png" alt="Ellipse" />
+      <h1>energia fitness</h1>
+    </div>
+    <main>
+      <section>
+        <h2>Абонементи і ціни</h2>
+        <div class="container-prise">
+          <table class="price">
+            <tr>
+              <td class="card">
+                <h3 class="title-price">Пробне заняття на фітнес напрямки</h3>
+
+                <p class="money">Безкоштовно</p>
+              </td>
+              <td class="card">
+                <h3 class="title-price">Разове заняття на фітнес напрямки</h3>
+
+                <p class="money">250 грн</p>
+              </td>
+              <td class="card">
+                <h3>Абонемент на фітнес напрямки</h3>
+                <p class="info-price">
+                  К-сть занять: 4<br />Термін придатності: <br />1 місяць
+                </p>
+                <p class="money">900 грн</p>
+              </td>
+              <td class="card">
+                <h3>Абонемент на фітнес напрямки</h3>
+                <p class="info-price">
+                  К-сть занять: 8<br />Термін придатності: <br />1 місяць
+                </p>
+                <p class="money">1700 грн</p>
+              </td>
+              <td class="card">
+                <h3>Абонемент на фітнес напрямки</h3>
+                <p class="info-price">
+                  К-сть занять: 12<br />Термін придатності: <br />1 місяць
+                </p>
+                <p class="money">2600 грн</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="card">
+                <h3 class="title-price2">
+                  Разове заняття на годину в тренажерному залі з тренером
+                </h3>
+
+                <p class="money">500 грн</p>
+              </td>
+              <td class="card">
+                <h3 class="title-price2">
+                  Сеанс масажу 1 година 
+                </h3>
+                <p> *вид масажу на виибір </p>
+                <p class="money">600 грн</p>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <p>&copy; 2024 Energia Fitness</p>
+      </div>
+    </footer>
+  </body>
 </html>
