--- a/schedules.html
+++ b/schedules.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ІС-31 Березка Ірина</title>
+    <link rel="stylesheet" href="style.css" />
+
     <style>
       body {
         margin: 0;
@@ -71,13 +73,13 @@
       <ul>
         <li><a href="index.html">Головна</a></li>
         <li>|</li>
-        <li><a href="reviews.html">Відгуки</a></li>
+        <li><a href="review.html">Відгуки</a></li>
         <li>|</li>
         <li><a href="directions.html">Напрямки та команда</a></li>
         <li>|</li>
-        <li><a href="price.html">Абонементи та ціни</a></li>
+        <li><a href="prices.html">Абонементи та ціни</a></li>
         <li>|</li>
-        <li><a href="schedule.html">Розклад групових занять</a></li>
+        <li><a href="schedules.html">Розклад групових занять</a></li>
       </ul>
     </nav>
     <div class="main-banner">
