--- a/directions.html
+++ b/directions.html
@@ -45,13 +45,13 @@
       <ul>
         <li><a href="index.html">Головна</a></li>
         <li>|</li>
-        <li><a href="reviews.html">Відгуки</a></li>
+        <li><a href="review.html">Відгуки</a></li>
         <li>|</li>
         <li><a href="directions.html">Напрямки та команда</a></li>
         <li>|</li>
-        <li><a href="price.html">Абонементи та ціни</a></li>
+        <li><a href="prices.html">Абонементи та ціни</a></li>
         <li>|</li>
-        <li><a href="schedule.html">Розклад групових занять</a></li>
+        <li><a href="schedules.html">Розклад групових занять</a></li>
       </ul>
     </nav>
     <div class="main-banner">
