--- a/prices.html
+++ b/prices.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ІС-31 Березка Ірина</title>
-        <link rel="stylesheet" href="style.css" />
-
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-        <header>
+    <header>
       <div class="container-head">
         <img src="logo.png" alt="Energia Fitness Logo" class="logo" />
 
@@ -41,25 +40,26 @@
           </p>
         </div>
       </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <li>|</li>
+          <li><a href="review.html">Відгуки</a></li>
+          <li>|</li>
+          <li><a href="directions.html">Напрямки та команда</a></li>
+          <li>|</li>
+          <li><a href="prices.html">Абонементи та ціни</a></li>
+          <li>|</li>
+          <li><a href="schedules.html">Розклад групових занять</a></li>
+        </ul>
+      </nav>
     </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li>|</li>
-        <li><a href="review.html">Відгуки</a></li>
-        <li>|</li>
-        <li><a href="directions.html">Напрямки та команда</a></li>
-        <li>|</li>
-        <li><a href="prices.html">Абонементи та ціни</a></li>
-        <li>|</li>
-        <li><a href="schedules.html">Розклад групових занять</a></li>
-      </ul>
-    </nav>
-    <div class="main-banner">
-      <img src="Ellipse 1.png" alt="Ellipse" />
-      <h1>energia fitness</h1>
-    </div>
+
     <main>
+      <div class="main-banner">
+        <img src="Ellipse 1.png" alt="Ellipse" />
+        <h1>energia fitness</h1>
+      </div>
       <section>
         <h2>Абонементи і ціни</h2>
         <div class="container-prise">
@@ -106,10 +106,8 @@
                 <p class="money">500 грн</p>
               </td>
               <td class="card">
-                <h3 class="title-price2">
-                  Сеанс масажу 1 година 
-                </h3>
-                <p> *вид масажу на виибір </p>
+                <h3 class="title-price2">Сеанс масажу 1 година</h3>
+                <p>*вид масажу на виибір</p>
                 <p class="money">600 грн</p>
               </td>
             </tr>
