--- a/review.html
+++ b/review.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ІС-31 Березка Ірина</title>
     <link rel="stylesheet" href="style.css" />
-
   </head>
-  <body>    
+  <body>
     <header>
       <div class="container-head">
         <img src="logo.png" alt="Energia Fitness Logo" class="logo" />
@@ -41,25 +40,26 @@
           </p>
         </div>
       </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <li>|</li>
+          <li><a href="review.html">Відгуки</a></li>
+          <li>|</li>
+          <li><a href="directions.html">Напрямки та команда</a></li>
+          <li>|</li>
+          <li><a href="prices.html">Абонементи та ціни</a></li>
+          <li>|</li>
+          <li><a href="schedules.html">Розклад групових занять</a></li>
+        </ul>
+      </nav>
     </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li>|</li>
-        <li><a href="review.html">Відгуки</a></li>
-        <li>|</li>
-        <li><a href="directions.html">Напрямки та команда</a></li>
-        <li>|</li>
-        <li><a href="prices.html">Абонементи та ціни</a></li>
-        <li>|</li>
-        <li><a href="schedules.html">Розклад групових занять</a></li>
-      </ul>
-    </nav>
-    <div class="main-banner">
-      <img src="Ellipse 1.png" alt="Ellipse" />
-      <h1>energia fitness</h1>
-    </div>
+
     <main>
+      <div class="main-banner">
+        <img src="Ellipse 1.png" alt="Ellipse" />
+        <h1>energia fitness</h1>
+      </div>
       <section class="reviews">
         <h2>Відгуки наших клієнтів</h2>
         <div class="container">
@@ -68,7 +68,11 @@
               <h3>Сніжана</h3>
               <p id="date">2024-03-04</p>
               <p class="review-text">
-                Недавно переїхала в Київ. довго шукала зал, який повністю мені підійде. Фітнес клуб дуже комфортний. чистий та акуратний. Нові пілони є явною перевагою. Працюю з тренером Вікторіїю, чудова спеціалістка, яка вміє працювати з мотивацією та знаходить індивідуальний підхід відповідно до потреб.
+                Недавно переїхала в Київ. довго шукала зал, який повністю мені
+                підійде. Фітнес клуб дуже комфортний. чистий та акуратний. Нові
+                пілони є явною перевагою. Працюю з тренером Вікторіїю, чудова
+                спеціалістка, яка вміє працювати з мотивацією та знаходить
+                індивідуальний підхід відповідно до потреб.
               </p>
             </div>
             <div class="review">
@@ -124,5 +128,6 @@
       <div class="container">
         <p>&copy; 2024 Energia Fitness</p>
       </div>
-    </footer></body>
+    </footer>
+  </body>
 </html>
