--- a/schedules.html
+++ b/schedules.html
@@ -68,141 +68,146 @@
           </p>
         </div>
       </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <li>|</li>
+          <li><a href="review.html">Відгуки</a></li>
+          <li>|</li>
+          <li><a href="directions.html">Напрямки та команда</a></li>
+          <li>|</li>
+          <li><a href="prices.html">Абонементи та ціни</a></li>
+          <li>|</li>
+          <li><a href="schedules.html">Розклад групових занять</a></li>
+        </ul>
+      </nav>
     </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li>|</li>
-        <li><a href="review.html">Відгуки</a></li>
-        <li>|</li>
-        <li><a href="directions.html">Напрямки та команда</a></li>
-        <li>|</li>
-        <li><a href="prices.html">Абонементи та ціни</a></li>
-        <li>|</li>
-        <li><a href="schedules.html">Розклад групових занять</a></li>
-      </ul>
-    </nav>
-    <div class="main-banner">
-      <img src="Ellipse 1.png" alt="Ellipse" />
-      <h1>energia fitness</h1>
-    </div>
+
     <main>
+      <div class="main-banner">
+        <img src="Ellipse 1.png" alt="Ellipse" />
+        <h1>energia fitness</h1>
+      </div>
       <section class="schedule">
         <h2>Розклад групових заннять</h2>
         <div class="schedule-table">
-        <table cellspacing="10" cellpadding="10">
-          <colgroup>
-          <col style="background-color: #69323250;">
-          </colgroup>
+          <table cellspacing="10" cellpadding="10">
+            <colgroup>
+              <col style="background-color: #69323250" />
+            </colgroup>
 
-          <tr>
-            <th>ЧАС</th>
-            <th>ПОНЕДІЛОК</th>
-            <th>ВІВТОРОК</th>
-            <th>СЕРЕДА</th>
-            <th>ЧЕТВЕР</th>
-            <th>П'ЯТНИЦЯ</th>
-            <th colspan="2">СУБОТА</th>
-            <th>НЕДІЛЯ</th>
-          </tr>
-          <tr>
-            <td>8:30</td>
-            <td>YOGA<br />тренер: Марина</td>
-            <td></td>
-            <td>YOGA<br />тренер: Марина</td>
-            <td>PILATES<br />тренер: Настя</td>
-            <td>STRETCHING<br />тренер: Віка</td>
-            <td>YOGA<br />тренер: Світлана</td>
-            <td>STRETCHING<br />тренер: Віка</td>
-            <td>STRETCHING<br />тренер: Дар'я</td>
-          </tr>
-          <tr>
-            <td>9:30</td>
-            <td>STRETCHING<br />тренер: Дар'я</td>
-            <td>YOGA<br />тренер: Світлана</td>
-            <td>FLY YOGA<br />тренер: Дар'я</td>
-            <td></td>
-            <td>POLE DANCE<br />тренер: Віка</td>
-            <td>FLY YOGA<br />тренер: Марина</td>
-            <td>PILATES<br />тренер: Настя</td>
-            <td>FLY YOGA<br />тренер: Марина</td>
-          </tr>
-          <tr>
-            <td>10:30</td>
-            <td></td>
-            <td>FLY YOGA<br />тренер: Світлана</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>POLE DANCE<br />тренер: Віка</td>
-            <td rowspan="2">FLY YOGA<br />тренер: Світлана</td>
-          </tr>
-          <tr>
-            <td>11:30</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>FLY YOGA<br />тренер: Марина</td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>15:30</td>
-            <td></td>
-            <td>POLE DANCE<br />тренер: Світлана</td>
-            <td></td>
-            <td>POLE DANCE<br />тренер: Світлана</td>
-            <td></td>
-            <td></td>
-            <td rowspan="2">FLY YOGA<br />тренер: Марина</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>16:30</td>
-            <td>POLE DANCE<br />тренер: Віка</td>
-            <td>FLY YOGA<br />тренер: Світлана</td>
-            <td>POLE DANCE<br />тренер: Віка</td>
-            <td>FLY YOGA<br />тренер: Світлана</td>
-            <td></td>
-            <td>YOGA<br />тренер: Світлана</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>17:30</td>
-            <td>PILATES<br />тренер: Настя</td>
-            <td>PILATES<br />тренер: Дар'я</td>
-            <td>PILATES<br />тренер: Настя</td>
-            <td>PILATES<br />тренер: Дар'я</td>
-            <td>FLY YOGA<br />тренер: Марина</td>
-            <td>PILATES<br />тренер: Настя</td>
-            <td>YOGA<br />тренер: Марина</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>18:30</td>
-            <td>POLE DANCE<br />тренер: Віка</td>
-            <td>FLY YOGA<br />тренер: Дар'я</td>
-            <td>POLE DANCE<br />тренер: Віка</td>
-            <td>STRETCHING<br />тренер: Дар'я</td>
-            <td>POLE DANCE<br />тренер: Світлана</td>
-            <td></td>
-            <td></td>
-            <td rowspan="2">POLE DANCE<br />тренер: Віка</td>
-          </tr>
-          <tr>
-            <td>19:30</td>
-            <td>STRETCHING<br />тренер: Віка</td>
-            <td></td>
-            <td>STRETCHING<br />тренер: Віка</td>
-            <td>FLY YOGA<br />тренер: Марина</td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
-        <p id="notice">*індивідуальні заняття можливі в години, в яких не вказані групові заняття <br></p></div>
+            <tr>
+              <th>ЧАС</th>
+              <th>ПОНЕДІЛОК</th>
+              <th>ВІВТОРОК</th>
+              <th>СЕРЕДА</th>
+              <th>ЧЕТВЕР</th>
+              <th>П'ЯТНИЦЯ</th>
+              <th colspan="2">СУБОТА</th>
+              <th>НЕДІЛЯ</th>
+            </tr>
+            <tr>
+              <td>8:30</td>
+              <td>YOGA<br />тренер: Марина</td>
+              <td></td>
+              <td>YOGA<br />тренер: Марина</td>
+              <td>PILATES<br />тренер: Настя</td>
+              <td>STRETCHING<br />тренер: Віка</td>
+              <td>YOGA<br />тренер: Світлана</td>
+              <td>STRETCHING<br />тренер: Віка</td>
+              <td>STRETCHING<br />тренер: Дар'я</td>
+            </tr>
+            <tr>
+              <td>9:30</td>
+              <td>STRETCHING<br />тренер: Дар'я</td>
+              <td>YOGA<br />тренер: Світлана</td>
+              <td>FLY YOGA<br />тренер: Дар'я</td>
+              <td></td>
+              <td>POLE DANCE<br />тренер: Віка</td>
+              <td>FLY YOGA<br />тренер: Марина</td>
+              <td>PILATES<br />тренер: Настя</td>
+              <td>FLY YOGA<br />тренер: Марина</td>
+            </tr>
+            <tr>
+              <td>10:30</td>
+              <td></td>
+              <td>FLY YOGA<br />тренер: Світлана</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>POLE DANCE<br />тренер: Віка</td>
+              <td rowspan="2">FLY YOGA<br />тренер: Світлана</td>
+            </tr>
+            <tr>
+              <td>11:30</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>FLY YOGA<br />тренер: Марина</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>15:30</td>
+              <td></td>
+              <td>POLE DANCE<br />тренер: Світлана</td>
+              <td></td>
+              <td>POLE DANCE<br />тренер: Світлана</td>
+              <td></td>
+              <td></td>
+              <td rowspan="2">FLY YOGA<br />тренер: Марина</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>16:30</td>
+              <td>POLE DANCE<br />тренер: Віка</td>
+              <td>FLY YOGA<br />тренер: Світлана</td>
+              <td>POLE DANCE<br />тренер: Віка</td>
+              <td>FLY YOGA<br />тренер: Світлана</td>
+              <td></td>
+              <td>YOGA<br />тренер: Світлана</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>17:30</td>
+              <td>PILATES<br />тренер: Настя</td>
+              <td>PILATES<br />тренер: Дар'я</td>
+              <td>PILATES<br />тренер: Настя</td>
+              <td>PILATES<br />тренер: Дар'я</td>
+              <td>FLY YOGA<br />тренер: Марина</td>
+              <td>PILATES<br />тренер: Настя</td>
+              <td>YOGA<br />тренер: Марина</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>18:30</td>
+              <td>POLE DANCE<br />тренер: Віка</td>
+              <td>FLY YOGA<br />тренер: Дар'я</td>
+              <td>POLE DANCE<br />тренер: Віка</td>
+              <td>STRETCHING<br />тренер: Дар'я</td>
+              <td>POLE DANCE<br />тренер: Світлана</td>
+              <td></td>
+              <td></td>
+              <td rowspan="2">POLE DANCE<br />тренер: Віка</td>
+            </tr>
+            <tr>
+              <td>19:30</td>
+              <td>STRETCHING<br />тренер: Віка</td>
+              <td></td>
+              <td>STRETCHING<br />тренер: Віка</td>
+              <td>FLY YOGA<br />тренер: Марина</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+          <p id="notice">
+            *індивідуальні заняття можливі в години, в яких не вказані групові
+            заняття <br />
+          </p>
+        </div>
       </section>
     </main>
     <footer>
