--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="ІС-31 Березка Ірина">
+    <meta name="author" content="ІС-31 Березка Ірина" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness club</title>
     <link rel="stylesheet" href="style.css" />
 
     <style>
-       tr a {
-            color: rgb(216, 97, 28) !important; 
-            font-weight: bold;
-        }
+      tr a {
+        color: rgb(216, 97, 28) /*!important*/;
+        font-weight: bold;
+      }
       table {
         margin: 0 auto;
         padding: 20px 0;
@@ -30,14 +30,18 @@
         color: #fff;
       }
       .gost {
-        color: rgb(102, 45, 18); 
-          font-weight: bold; 
+        color: rgb(102, 45, 18);
+        font-weight: bold;
       }
-
     </style>
-
   </head>
-  <body style="background-image: url(background.jpeg);background-size: 100%;font-family: Life">
+  <body
+    style="
+      background-image: url(background.jpeg);
+      background-size: 100%;
+      font-family: Life;
+    "
+  >
     <header>
       <div class="container-head">
         <img src="logo.png" alt="Energia Fitness Logo" class="logo" />
@@ -71,35 +75,35 @@
           </p>
         </div>
       </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <li>|</li>
+          <li><a href="review.html">Відгуки</a></li>
+          <li>|</li>
+          <li><a href="directions.html">Напрямки та команда</a></li>
+          <li>|</li>
+          <li><a href="prices.html">Абонементи та ціни</a></li>
+          <li>|</li>
+          <li><a href="schedules.html">Розклад групових занять</a></li>
+        </ul>
+      </nav>
     </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li>|</li>
-        <li><a href="review.html">Відгуки</a></li>
-        <li>|</li>
-        <li><a href="directions.html">Напрямки та команда</a></li>
-        <li>|</li>
-        <li><a href="prices.html">Абонементи та ціни</a></li>
-        <li>|</li>
-        <li><a href="schedules.html">Розклад групових занять</a></li>
-      </ul>
-    </nav>
-    <div class="main-banner">
-      <img src="Ellipse 1.png" alt="Ellipse" />
-      <h1>energia fitness</h1>
-    </div>
 
     <main>
-    <section>
-        <h2 style="text-align: center;">Хто ми?</h2>
+      <div class="main-banner">
+        <img src="Ellipse 1.png" alt="Ellipse" />
+        <h1>energia fitness</h1>
+      </div>
+      <section>
+        <h2 style="text-align: center">Хто ми?</h2>
         <div class="container">
           <div class="photoes">
-            <img src="about-us1.png" alt="about-us1"/>
-            <img src="about-us2.png" alt="about-us2"/>
-            <img src="about-us3.png" alt="about-us3"/>
+            <img src="about-us1.png" alt="about-us1" />
+            <img src="about-us2.png" alt="about-us2" />
+            <img src="about-us3.png" alt="about-us3" />
           </div>
-          <p style="text-align: center;padding-left: 200px; width: 500px;">
+          <p style="text-align: center; padding-left: 200px; width: 500px">
             Фітнес клуби Києва дивують своїм різноманіттям, та саме наш фітнес
             клуб energia fitness пропонує вам унікальну можливість провести
             тренування з максимальним результатом і користю для здоров`я . На
@@ -124,18 +128,31 @@
             <div class="review">
               <h3>Сніжана</h3>
               <p class="date">2024-03-04</p>
-              <p class="review-text" style="font-size: 18px; font-family: 'Courier New', Courier, monospace !important;">
+              <p
+                class="review-text"
+                style="
+                  font-size: 18px;
+                  font-family: 'Courier New', Courier, monospace !important;
+                "
+              >
                 Недавно переїхала в Київ. довго шукала зал, який повністю мені
                 підійде. Фітнес клуб дуже комфортний. чистий та акуратний. Нові
-                пілони є явною перевагою. Працюю з тренером <span class="gost"> Вікторією</span>, чудова
-                спеціалістка, яка вміє працювати з мотивацією та знаходить
-                індивідуальний підхід відповідно до потреб.
+                пілони є явною перевагою. Працюю з тренером
+                <span class="gost"> Вікторією</span>, чудова спеціалістка, яка
+                вміє працювати з мотивацією та знаходить індивідуальний підхід
+                відповідно до потреб.
               </p>
             </div>
             <div class="review">
               <h3>Даша</h3>
               <p class="date">2023-11-30</p>
-              <p class="review-text" style="font-size: 18px; font-family: 'Courier New', Courier, monospace !important;">
+              <p
+                class="review-text"
+                style="
+                  font-size: 18px;
+                  font-family: 'Courier New', Courier, monospace !important;
+                "
+              >
                 Займаюсь з Настею і цей тренер мені максимально підходить!
                 Професійна і дуже легка в спілкуванні слідкує за моїм
                 харчуванням, хоч це і не входить в її обов'язки. В мене запит на
@@ -146,11 +163,18 @@
             <div class="review">
               <h3>Дарина</h3>
               <p class="date">2024-11-12</p>
-              <p class="review-text" style="font-size: 18px; font-family: 'Courier New', Courier, monospace !important;">
+              <p
+                class="review-text"
+                style="
+                  font-size: 18px;
+                  font-family: 'Courier New', Courier, monospace !important;
+                "
+              >
                 Дуже рекомендую цей клуб. Мої показники зростають все завдяки
-                професіоналізму супер тренера Вікторії. Якісні тренажери, полотна та пілони на
-                будь- який смак, ввічливий персонал, готовий завжди допомогти,
-                все на високому рівні. Тренера дуже мотивують рухатися далі!
+                професіоналізму супер тренера Вікторії. Якісні тренажери,
+                полотна та пілони на будь- який смак, ввічливий персонал,
+                готовий завжди допомогти, все на високому рівні. Тренера дуже
+                мотивують рухатися далі!
               </p>
             </div>
           </div>
@@ -169,22 +193,51 @@
               <th>Напрямок 5</th>
             </thead>
             <tbody>
-              <tr >
-                <td><img height="380" src="pole-dance.jpg" alt="Pole Dance" /></td>
+              <tr>
+                <td>
+                  <img height="380" src="pole-dance.jpg" alt="Pole Dance" />
+                </td>
                 <td><img height="380" src="fly-yoga.jpg" alt="Fly Yoga" /></td>
                 <td><img height="380" src="pilates.jpg" alt="Pilates" /></td>
                 <td><img height="380" src="yoga.jpg" alt="Yoga" /></td>
-                <td><img height="380" src="stretching.jpg" alt="Stretching" /></td>
+                <td>
+                  <img height="380" src="stretching.jpg" alt="Stretching" />
+                </td>
               </tr>
               <tr>
-                <td><a href="https://www.instagram.com/reel/DFug64AM-cr/?igsh=ZDJvYWx2dTRqYmxv">Pole-dance Instagram reel</a></td>
-                <td><a href="https://www.instagram.com/reel/C0bIZY9vhjt/?igsh=NTJhczJ2OG9hZTVl">Fly-yoga Instagram reel</a></td>
-                <td><a href="https://www.instagram.com/reel/DGIuITUuC-x/?igsh=MTM5ZHViNGxzYWN0NQ==">Pilates Instagram reel</a></td>
-                <td><a href="https://www.instagram.com/reel/DFxlEhIsu8h/?igsh=MWwyMHoyZWxkNjNyOQ==">Yoga Instagram reel</a></td>
-                <td><a href="https://www.instagram.com/reel/DF5zSD4yRfL/?igsh=MWhuZWt3c2I4Z3l0aw==">Stretching Instagram reel</a></td>
+                <td>
+                  <a
+                    href="https://www.instagram.com/reel/DFug64AM-cr/?igsh=ZDJvYWx2dTRqYmxv"
+                    >Pole-dance Instagram reel</a
+                  >
+                </td>
+                <td>
+                  <a
+                    href="https://www.instagram.com/reel/C0bIZY9vhjt/?igsh=NTJhczJ2OG9hZTVl"
+                    >Fly-yoga Instagram reel</a
+                  >
+                </td>
+                <td>
+                  <a
+                    href="https://www.instagram.com/reel/DGIuITUuC-x/?igsh=MTM5ZHViNGxzYWN0NQ=="
+                    >Pilates Instagram reel</a
+                  >
+                </td>
+                <td>
+                  <a
+                    href="https://www.instagram.com/reel/DFxlEhIsu8h/?igsh=MWwyMHoyZWxkNjNyOQ=="
+                    >Yoga Instagram reel</a
+                  >
+                </td>
+                <td>
+                  <a
+                    href="https://www.instagram.com/reel/DF5zSD4yRfL/?igsh=MWhuZWt3c2I4Z3l0aw=="
+                    >Stretching Instagram reel</a
+                  >
+                </td>
               </tr>
               <tr>
-                <td >Pole Dance</td>
+                <td>Pole Dance</td>
                 <td>Fly Yoga</td>
                 <td>Pilates</td>
                 <td>Yoga</td>
@@ -194,22 +247,36 @@
           </table>
         </div>
       </section>
-      <div style="position: relative; width: 100%; max-width: 800px; height: 450px; padding: 20px; margin: auto;" id="map">
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25244.044063657385!2d30.523400000000003!3d50.4501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTAuNDUwMSwgMzAuNTIzNA!5e0!3m2!1suk!2sua!4v1709112345678"
-        width="100%" 
-        height="100%" 
-        style="border: 2px solid black; border-radius: 10px; box-shadow: 2px 2px 10px rgba(0,0,0,0.2);"
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-</div>
 
-
+      <div
+        style="
+          position: relative;
+          width: 100%;
+          max-width: 800px;
+          height: 450px;
+          padding: 20px;
+          margin: auto;
+        "
+        id="map"
+      >
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25244.044063657385!2d30.523400000000003!3d50.4501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTAuNDUwMSwgMzAuNTIzNA!5e0!3m2!1suk!2sua!4v1709112345678"
+          width="100%"
+          height="100%"
+          style="
+            border: 2px solid black;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+          "
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
+      </div>
     </main>
     <footer>
-      <div >
+      <div>
         <p>&copy; 2025 Energia Fitness</p>
       </div>
     </footer>
